Add Redis caching for categories